tests/host_path_mount/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: check-kyverno
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-deployment
  template:
    metadata:
      labels:
        app: test-deployment
    spec:
      containers:
        - name: nginx
          image: nginx:latest
      # volumes:
      #   - name: test-volume
      #     hostPath:
      #       path: /data
      #       type: Directory
