tests/host_path_mount/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: check-kyverno
spec:
  containers:
    - name: nginx
      image: nginx:latest
  # volumes:
  #   - name: test-volume
  #     hostPath:
  #       path: /data
  #       type: Directory
